# socket-camera-imu

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  my_socket.py
tinyxml2/: tinyxml2.cpp  tinyxml2.h
